
=======================================================
		NK code:  Log of Changes
=======================================================


Mar 07 2012     partial cleanup of CG and nksiclib, in order to speedup the innerloop part.(AF)

Feb 23 2012     cp_restarted slightly changed to allow WanT postprocessing. (AF)

Feb 20 2012     convg_outer.dat is written only if iprsta > 1 (ie verbosity="high"). (AF)

Feb 16 2012     Bug fixed in the calculation of PBE0 and B3LYP energies (hfscalfact missing
		in the calculation of the exx term). The bug didn't affect at all the
		eigenvalues and eigenvectors (the force term was already correct).
		Reference results for tests 02 and 05 updated accordingly. (AF)

Feb 04 2012     Changed a minor flavor in CG outer loop routine.  Not rotating
		the conjugate gradient vector according to the inner loop rotation
		gives us a better convergence result (empirically).  This version
		comments out the rotation of the conjugate gradient vector. (CHP)

Feb 03 2012     Fixed bugs in CG routine for SIC.  Mainly, pc2 has been replaced
		by pc3, which is an wavefunction orthonormalization routine
		suitable for ODD density functionals.  Previous pc2 does not alllow
		the unitary transform between wavefunctions in the occupied
		manifold. Approximate, analytical Lowdin orthogonalization has
		been performed in pc3. (CHP)

Oct 25 2011     Cleanup of unused variables and consistency check in
		nksiclib.f90. Few bugs (eg real-complex mismatch of bec) fixed. (AF)

Aug 10 2011     Fixed a bug for nspin=2 and no spin-symmetrized case (before, the
		SIC force was calculated with a wrong index for vsic(:,i) in the
		case of inner loop minimization. (CHP)

Aug 04 2011     Fixed three bugs.
		innerloop_dd_nstep, innerloop_cg_nsd, innerloop_cg_nreset was
		previous defined LOGICAL in Modules/input_parameters.f90 (thanks Iss).
		In inner loop CG routine, (1) nspin was considered in dE/d(step).